--- a/index.css
+++ b/index.css
@@ -163,7 +163,7 @@ p {
     position: absolute;
     margin-top: 275px;
     margin-left: 160px;
-    font-weight: 550;
+    //font-weight: 550;
     color: white;
     //text-shadow: -12px 12px lightgray;
     font-size: 28px;
